fix bottom margin issue and add overflow

--- a/app/about/about.module.scss
+++ b/app/about/about.module.scss
@@ -41,6 +41,10 @@
         .aboutLiam {
             margin-bottom: 64px;
         }
+
+        .aboutThisWebsite {
+            margin-bottom: 64px;
+        }
     }
 
     .externalLinks {
